--- a/index.html
+++ b/index.html
@@ -5,181 +5,239 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chúc Mừng Năm Mới Bính Ngọ</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Great+Vibes&display=swap" rel="stylesheet">
+<!-- Font -->
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
 <style>
 *{box-sizing:border-box}
-
 body{
   margin:0;
   min-height:100vh;
-  font-family:'Be Vietnam Pro',sans-serif;
-  background:#fdf6e3;
   display:flex;
-  align-items:center;
   justify-content:center;
+  align-items:center;
+  background:#fbf4e6;
+  font-family:"Be Vietnam Pro",sans-serif;
   overflow:hidden;
-  transition:background 1.2s ease;
 }
 
-/* NỀN TẾT – KHÔNG VỠ */
+/* ===== NỀN TẾT (SAU KHI MỞ) ===== */
 body.tet-bg{
-  background:url("tet-bg.png") no-repeat center center/cover;
+  background:url("tet-bg.png") center center no-repeat;
+  background-size:contain;
+  background-color:#b71c1c;
+}
+@media(min-width:768px){
+  body.tet-bg{background-size:cover;}
 }
 
-.envelope-container{text-align:center}
-
+/* ===== PHONG BÌ ===== */
+.envelope-wrapper{
+  text-align:center;
+}
 .envelope{
-  width:300px;
-  height:200px;
-  background:linear-gradient(145deg,#c62828,#e53935);
-  border-radius:14px;
   position:relative;
-  box-shadow:0 12px 30px rgba(0,0,0,.3);
+  width:320px;
+  max-width:80vw;
+  height:200px;
+  margin:auto;
 }
 
-.envelope::before{
-  content:"";
+/* Thân phong bì */
+.env-body{
   position:absolute;
+  bottom:0;
   width:100%;
-  height:100%;
-  background:#b71c1c;
-  clip-path:polygon(0 0,50% 55%,100% 0);
-  border-radius:14px 14px 0 0;
+  height:140px;
+  background:#d32f2f;
+  border-radius:0 0 12px 12px;
+  box-shadow:0 10px 25px rgba(0,0,0,.25);
 }
 
+/* Nắp phong bì – SỬA LỆCH 100% */
+.env-flap{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:140px;
+  background:#c62828;
+  clip-path:polygon(0 0,100% 0,50% 65%);
+  transform-origin:top center;
+  transition:transform .9s ease;
+  z-index:3;
+}
+
+/* Hai mép trong */
+.env-left,.env-right{
+  position:absolute;
+  bottom:0;
+  width:50%;
+  height:140px;
+  background:#e53935;
+}
+.env-left{
+  left:0;
+  clip-path:polygon(0 0,100% 100%,0 100%);
+}
+.env-right{
+  right:0;
+  clip-path:polygon(100% 0,100% 100%,0 100%);
+}
+
+/* Khi mở */
+.envelope.open .env-flap{
+  transform:rotateX(180deg);
+}
+
+/* NÚT */
 .open-btn{
   margin-top:20px;
-  padding:12px 32px;
-  font-size:18px;
-  border-radius:30px;
+  padding:12px 28px;
   border:none;
+  border-radius:30px;
   background:#d32f2f;
   color:#fff;
+  font-size:18px;
   cursor:pointer;
 }
 
+/* ===== THIỆP ===== */
 .card{
   display:none;
-  max-width:720px;
-  padding:30px;
-  margin:20px;
-  background:rgba(255,255,255,.9);
-  border-radius:22px;
+  max-width:650px;
+  width:90%;
+  background:rgba(255,255,255,.92);
+  border-radius:20px;
+  padding:28px;
   text-align:center;
-  box-shadow:0 12px 40px rgba(0,0,0,.35);
-  animation:zoomIn 1s ease;
+  box-shadow:0 15px 40px rgba(0,0,0,.25);
+  z-index:2;
 }
 
-h1{
-  font-family:'Great Vibes',cursive;
-  font-size:46px;
+.card h1{
+  font-family:"Dancing Script",cursive;
+  font-size:42px;
   color:#c62828;
 }
 
-.message{
-  font-size:16px;
+.card p{
+  font-size:17px;
   line-height:1.7;
+  margin-top:14px;
 }
 
-@media(max-width:480px){
-  h1{font-size:36px}
-  .message{font-size:15px}
-}
-
-/* ===== PHÁO HOA TIA ===== */
-.firework{
+/* ===== PHÁO HOA ===== */
+canvas{
   position:fixed;
-  left:50%;
-  top:50%;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
   pointer-events:none;
-}
-
-.spark{
-  position:absolute;
-  width:6px;
-  height:6px;
-  border-radius:50%;
-  animation:shoot 1.2s ease-out forwards;
-}
-
-@keyframes shoot{
-  0%{transform:translate(0,0) scale(1);opacity:1}
-  100%{transform:translate(var(--x),var(--y)) scale(.2);opacity:0}
-}
-
-@keyframes zoomIn{
-  from{transform:scale(.7);opacity:0}
-  to{transform:scale(1);opacity:1}
+  z-index:1;
 }
 </style>
 </head>
 
 <body>
 
-<div class="envelope-container" id="envelopeBox">
-  <div class="envelope"></div>
+<canvas id="fireworks"></canvas>
+
+<!-- PHONG BÌ -->
+<div class="envelope-wrapper" id="envBox">
+  <div class="envelope" id="envelope">
+    <div class="env-flap"></div>
+    <div class="env-left"></div>
+    <div class="env-right"></div>
+    <div class="env-body"></div>
+  </div>
   <button class="open-btn" onclick="openCard()">Mở Thiệp</button>
 </div>
 
+<!-- THIỆP -->
 <div class="card" id="card">
   <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
-  <div class="message" id="message"></div>
+  <p id="wish"></p>
 </div>
 
+<!-- NHẠC -->
 <audio id="music" src="tet-music.mp3" loop></audio>
 
 <script>
+/* ===== LỜI CHÚC ===== */
 const wishes=[
-"Xuân Bính Ngọ gõ cửa mang theo nhiều may mắn.\nChúc bạn học tập tiến bộ mỗi ngày.\nTinh thần luôn vững vàng và lạc quan.\nGia đình sum vầy, ấm áp yêu thương.\nMột năm mới an khang thịnh vượng.",
-
-"Năm mới đến, chúc bạn tràn đầy năng lượng.\nHọc tập thuận lợi, đạt nhiều thành tích.\nMỗi ngày đều có niềm vui mới.\nGia đình bình an, hạnh phúc.\nXuân mới rực rỡ như pháo hoa."
+"Chúc năm mới an khang thịnh vượng, học tập tiến bộ, mọi ước mơ đều thành hiện thực. Mong bạn luôn giữ được niềm vui, sự cố gắng và tinh thần lạc quan trong cuộc sống.",
+"Xuân mới đến mang theo nhiều hy vọng. Chúc bạn sức khỏe dồi dào, học hành thuận lợi, mỗi ngày đều là một ngày tràn đầy năng lượng tích cực.",
+"Năm mới Bính Ngọ, chúc bạn luôn bền bỉ, mạnh mẽ, vượt qua mọi thử thách, đạt được những thành quả xứng đáng trong học tập và cuộc sống."
 ];
+document.getElementById("wish").innerText =
+wishes[Math.floor(Math.random()*wishes.length)];
 
+/* ===== MỞ THIỆP ===== */
 function openCard(){
-  document.getElementById("envelopeBox").style.display="none";
-  document.getElementById("card").style.display="block";
-  document.body.classList.add("tet-bg");
+  document.getElementById("envelope").classList.add("open");
+  setTimeout(()=>{
+    document.getElementById("envBox").style.display="none";
+    document.getElementById("card").style.display="block";
+    document.body.classList.add("tet-bg");
+    startMusic();
+    startFireworks();
+  },900);
+}
 
-  document.getElementById("message").innerText=
-    wishes[Math.floor(Math.random()*wishes.length)];
-
-  // NHẠC VÀO DẦN
-  const music=document.getElementById("music");
-  music.volume=0;
-  music.play();
+/* ===== NHẠC FADE IN ===== */
+function startMusic(){
+  const m=document.getElementById("music");
+  m.volume=0;
+  m.play();
   let v=0;
   const fade=setInterval(()=>{
     v+=0.02;
-    if(v>=1){v=1;clearInterval(fade)}
-    music.volume=v;
-  },200);
-
-  // PHÁO HOA TIA
-  setInterval(createFirework,600);
+    m.volume=Math.min(v,1);
+    if(v>=1)clearInterval(fade);
+  },120);
 }
 
-function createFirework(){
-  const fw=document.createElement("div");
-  fw.className="firework";
-  fw.style.left=Math.random()*100+"vw";
-  fw.style.top=Math.random()*80+"vh";
+/* ===== PHÁO HOA ===== */
+const canvas=document.getElementById("fireworks");
+const ctx=canvas.getContext("2d");
+function resize(){
+  canvas.width=innerWidth;
+  canvas.height=innerHeight;
+}
+window.onresize=resize;
+resize();
 
-  const colors=["#ffd54f","#ff5252","#ff9800","#f06292","#ffeb3b"];
+let sparks=[];
+function startFireworks(){
+  setInterval(()=>{
+    for(let i=0;i<40;i++){
+      sparks.push({
+        x:Math.random()*canvas.width,
+        y:canvas.height,
+        vx:(Math.random()-0.5)*6,
+        vy:-Math.random()*9-6,
+        life:60,
+        color:`hsl(${Math.random()*360},100%,60%)`
+      });
+    }
+  },900);
 
-  for(let i=0;i<24;i++){
-    const s=document.createElement("div");
-    s.className="spark";
-    const angle=Math.random()*2*Math.PI;
-    const distance=80+Math.random()*70;
-    s.style.setProperty("--x",Math.cos(angle)*distance+"px");
-    s.style.setProperty("--y",Math.sin(angle)*distance+"px");
-    s.style.background=colors[Math.floor(Math.random()*colors.length)];
-    fw.appendChild(s);
+  function draw(){
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+    sparks.forEach((s,i)=>{
+      s.x+=s.vx;
+      s.y+=s.vy;
+      s.vy+=0.15;
+      s.life--;
+      ctx.fillStyle=s.color;
+      ctx.fillRect(s.x,s.y,3,3);
+      if(s.life<=0)sparks.splice(i,1);
+    });
+    requestAnimationFrame(draw);
   }
-
-  document.body.appendChild(fw);
-  setTimeout(()=>fw.remove(),1300);
+  draw();
 }
 </script>
 
