--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body.tet-bg{
 /* Nắp phong bì – SỬA LỆCH 100% */
 .env-flap{
   position:absolute;
-  top:0;
+  top:20px;
   left:0;
   width:100%;
   height:140px;
